- misc cleanups
- diskdrake:
  o auto fill LV name from mntpnt (mga#5407)
  o suggest "lv_foo" instead of just "foo" for LVname
- drakboot:
  o skip swap in the list of partitions (mga#15767)
  o split drakautologin from drakboot (mga#7160)
- draksound:
  o drop support for ISApnp sound cards

Version 17.8 - 22 December 2015

- recognize new kernel-4.3 drivers
- use sddm instead of kdm
- use task-plasma5 instead of task-kde4

Version 17.3 - 4 December 2015

- recognize new kernel-4.3 drivers
- drakboot:
  o fix lightdm support after upstream config file change

Version 17.1 - 27 August 2015

- recognize new kernel-4.1 drivers

Version 16.104 - 13 June 2015

- diskdrake:
  o prevent errors when telling kernel to reread partition table

Version 16.103 - 4 June 2015

- drakfont:
  o fix moving fonts (mga#16074)
- diskdrake, partitioning_wizard:
  o only use current disk when auto partitioning, wiping disk,
    using free space (mga#16055)

Version 16.102 - 29 May 2015

- diskdrake:
  o ignore special 'Packard_Bell' and 'Push_Button_Reset' partitions (mga#15999)
  o run udevadm settle after actions that trigger device reload (mga#15999)
- harddrake2:
  o set min width for left panel (mga#16026)

Version 16.101 - 25 May 2015

- library (for draklive-install):
  o fix not always suggesting /boot/ESP mount point (mga#15689)
- diskdrake:
  o set pt_type according to fs_type before flag cases (mga#16029)
- localedrake:
  o fix reading back IM config (mga#15761)

Version 16.99 - 20 May 2015

- diskdrake:
  o display cosmetics when reading back GPT partitions
  o fix mnt point for FAT partitions on GTP (mga#15987)
  o set the proper GUID for FAT partitions on GPT
- drakboot:
  o do not detect grub2 on UEFI when there's no bootloader
  o fix default grub2 kernel parameters (mga#15984)

Version 16.98 - 19 May 2015

- all tools:
  o fix banner icon being cliped (mga#12358)
- drakfont:
  o fix crash (mga#13627)
  o fix crash with --windows_import (mga9347)